# TokenMonitor

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  README.md  float-ball.html  index.html  package-lock.json  package.json  run_xvfb.sh  test_serde.long-type-4430549900796821074.txt  test_serde.rs  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.json
.claude/commands/: ccdebug.md  cconboard.md  ccplan.md
.claude/worktrees/fix-linux-jsonl-picker/: .gitignore  CHANGELOG.md  DEVELOPMENT.md  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
archive/: ccusage.rs
archive/ecl/: build-automation.yaml  cross-platform-ccusage-ssh.yaml  device-bug-and-litellm-pricing.yaml  float-ball-background-fix.yaml  floatball-pill-and-resize-fix.yaml  logging-system.yaml  multi-device-ui-design.yaml  ssh-device-cost-breakdown.yaml  ssh-persistence-and-sync-test.yaml  windows-ux-uninstall.yaml
archive/ecl/archive/: README.md  file-reorganization.yaml  float-ball-fixes-batch.yaml  float-ball-snap-threshold.yaml  floating-ball-hover-transparency.yaml  revert-cost-calculation.yaml  simplify-future-work.yaml  ui-animation-taskbar.yaml  ui-polish-batch-2.yaml
archive/prereq-scripts/: build-prereq-installer.sh  setup-prereqs.nsi  setup-prereqs.sh
docs/: 2026-03-21-change-stats-plan.md  2026-03-21-change-stats-ui-design.md  2026-03-21-subagent-stats-plan.md  2026-03-21-subagent-stats-spec.md  2026-03-21-subagent-usage-design.md  CHANGELOG.md  DEVELOPMENT.md  design-change-stats.md  repo-audit.json  repo-audit.md  tutorial.md
docs/debug/: float-ball-linux-hidpi-jitter_2026-04-04.md
docs/ecl/: architecture-refactor.yaml  code-optimization.yaml  dynamic-exchange-rates.yaml  linux-floatball-geometry.yaml  payload-disk-cache.yaml  perf-fixed-window.yaml  single-instance-guard.yaml  usage-archive.yaml  usage-import-export.yaml
docs/superpowers/plans/: 2026-03-15-replace-ccusage-with-native-rust-parser.md  2026-03-18-menu-bar-status.md  2026-03-19-github-workflows.md  2026-03-19-macos-glass-effect.md
docs/superpowers/specs/: 2026-03-15-replace-ccusage-with-native-rust-parser.md  2026-03-15-test-coverage-design.md  2026-03-16-period-navigation-design.md  2026-03-18-menu-bar-status-design.md  2026-03-19-github-workflows-design.md  2026-03-19-macos-glass-effect-design.md
docs/testing/: auto-update.md
profiler/: Cargo.toml
profiler/src/: commands_mod.rs  main.rs  secrets.rs  usage_mod.rs
scripts/: release.sh  sync-tauri-versions.mjs  tmp-merge-dedup-usage.mjs
src/: App.svelte  app.css  float-ball.ts  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: windows-test.manifest
src-tauri/src/: ccusage.rs  change_stats.rs  commands.rs  lib.rs  logging.rs  models.rs  parser.rs  paths.rs  pricing.rs  rate_limits.rs  subagent_stats.rs  tray_render.rs
src-tauri/src/commands/: calendar.rs  config.rs  float_ball.rs  logging.rs  period.rs  ssh.rs  statusline.rs  tray.rs  updater.rs  usage_io.rs  usage_query.rs
src-tauri/src/commands/float_ball/: layout.rs  mod.rs
src-tauri/src/platform/: mod.rs
src-tauri/src/platform/linux/: mod.rs
src-tauri/src/platform/macos/: mod.rs
src-tauri/src/platform/windows/: mod.rs  taskbar.rs  window.rs
src-tauri/src/rate_limits/: claude.rs  claude_cli.rs  codex.rs  codex_cli.rs  cursor.rs  http.rs  mod.rs  oauth_refresh.rs
src-tauri/src/secrets/: cursor.rs  mod.rs
src-tauri/src/single_instance/: dialog.rs  mod.rs  port.rs  protocol.rs
src-tauri/src/stats/: change.rs  mod.rs  subagent.rs
src-tauri/src/statusline/: install.rs  mod.rs  scripts.rs  source.rs  windows.rs
src-tauri/src/tray/: render.rs
src-tauri/src/updater/: channels.rs  mod.rs  persistence.rs  scheduler.rs  state.rs
src-tauri/src/usage/: archive.rs  cache_warmup.rs  ccusage.rs  claude_parser.rs  codex_parser.rs  cursor_parser.rs  device_aggregation.rs  exchange_rates.rs  integrations.rs  litellm.rs  mod.rs  openrouter.rs  parser.rs  payload_disk_cache.rs  pricing.rs  pricing_fallback.json  pricing_fallback.rs  ssh_config.rs  ssh_remote.rs
src/lib/: bootstrap.test.ts  bootstrap.ts  calendar-utils.ts  calendar.test.ts  changelog.test.ts  changelog.ts  footerView.test.ts  footerView.ts  modelSummary.test.ts  modelSummary.ts  providerMetadata.ts  rateLimitMonitor.test.ts  rateLimitMonitor.ts  rateLimitsView.test.ts  rateLimitsView.ts  resizeDebug.test.ts  resizeDebug.ts  resizeOrchestrator.test.ts  resizeOrchestrator.ts  traySync.test.ts  traySync.ts  trayTitle.test.ts  trayTitle.ts  windowAppearance.test.ts  windowAppearance.ts  windowSizing.test.ts  windowSizing.ts
src/lib/components/: AppearanceSettings.svelte  Breakdown.svelte  CacheWarmupSettings.svelte  Calendar.svelte  Chart.svelte  DateNav.svelte  DevicesView.svelte  FloatBall.svelte  Footer.svelte  HeaderTabsSettings.svelte  HiddenModelsSettings.svelte  KeychainPromptPreview.svelte  MetricsRow.svelte  ModelList.svelte  PermissionDisclosure.svelte  PermissionSettings.svelte  PermissionsOnboarding.svelte  SegmentedControl.svelte  Settings.svelte  SetupScreen.svelte  SingleDeviceView.svelte  SplashScreen.svelte  SshHostsSettings.svelte  SubagentList.svelte  SubagentList.test.ts  ThemeSettings.svelte  TimeTabs.svelte  Toggle.svelte  ToggleSwitch.svelte  TrayConfigSettings.svelte  UpdateBanner.svelte  UsageBars.svelte  WelcomeCard.svelte  chartBuckets.test.ts  chartBuckets.ts  floatBallInteraction.test.ts  floatBallInteraction.ts
src/lib/permissions/: keychain.test.ts  keychain.ts  statusline.ts  surfaces.test.ts  surfaces.ts
src/lib/stores/: rateLimits.test.ts  rateLimits.ts  settings.test.ts  settings.ts  updater.test.ts  updater.ts  usage.test.ts  usage.ts  usageIo.test.ts  usageIo.ts
src/lib/tray/: sync.test.ts  sync.ts  title.test.ts  title.ts
src/lib/types/: index.ts
src/lib/utils/: calendar.test.ts  (+7 more)
tests/: permissionSurface.test.mjs
tmp/: bedrock_usage.py  bedrock_usage_report.json  compare_usage.py  usage_comparison.json
(+98 files in other folders)
