[package]
name = "tm-profiler"
version = "0.0.0"
edition = "2021"
publish = false

# Standalone, Tauri-free profiling harness for TokenMonitor's usage pipeline.
# It #[path]-includes the parser/pricing/cache source from ../src-tauri/src so it
# exercises the real code, but links none of the Tauri/WebView2 stack (which
# fails to load on this machine). See src/main.rs.

[[bin]]
name = "tm-profiler"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
dirs = "6"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rayon = "1"
url = "2.5.8"

[profile.release]
opt-level = 3
