[package]
name = "token-monitor"
version = "0.3.2"
description = "macOS menu bar token usage monitor for Claude Code and Codex"
edition = "2021"

[lib]
name = "token_monitor_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["process", "fs", "time"] }
dirs = "6"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = ["NSAppearance", "NSApplication", "NSColor", "NSGraphics", "NSResponder", "NSStatusItem", "NSView", "NSWindow", "NSVisualEffectView", "objc2-quartz-core"] }
objc2-foundation = { version = "0.3.2", features = ["NSArray", "NSString"] }
objc2-quartz-core = { version = "0.3.2", features = ["CALayer"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["test-util", "macros", "rt-multi-thread"] }
