[package]
name = "token-monitor"
version = "0.6.2"
description = "Cross-platform system tray token usage monitor for Claude Code and Codex"
edition = "2021"

[lib]
name = "token_monitor_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["process", "fs", "time"] }
dirs = "6"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
    "Win32_UI_HiDpi",
    "Win32_UI_Shell",
    "Win32_System_Registry",
    "Win32_Graphics_Dwm",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3.2"
objc2-app-kit = { version = "0.3.2", features = [
    "NSAppearance",
    "NSButton",
    "NSControl",
    "NSResponder",
    "NSStatusBarButton",
    "NSStatusItem",
    "NSView",
] }

[dev-dependencies]
filetime = "0.2"
tempfile = "3"
tokio = { version = "1", features = ["test-util", "macros", "rt-multi-thread"] }
