[package]
name = "token-monitor"
version = "0.12.3"
description = "Cross-platform system tray token usage monitor for Claude Code and Codex"
edition = "2021"

[lib]
name = "token_monitor_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["process", "fs", "time"] }
dirs = "6"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false }
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
webkit2gtk = "2.0"
cairo-rs = "0.18"
# Cross-platform secret storage. Linux backend talks to the FreeDesktop
# Secret Service (libsecret/GNOME Keyring/KWallet) over D-Bus via pure Rust;
# `crypto-rust` avoids pulling libssl. Falls back to a 0600-perm file in the
# app data dir when the daemon isn't running (headless / fresh install).
keyring = { version = "3", default-features = false, features = [
    "sync-secret-service",
    "crypto-rust",
] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
    "Win32_UI_HiDpi",
    "Win32_UI_Shell",
    "Win32_System_Registry",
    "Win32_Graphics_Dwm",
] }
# Cross-platform secret storage on Windows Credential Manager (CredRead/Write).
keyring = { version = "3", default-features = false, features = ["windows-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3.2"
objc2-app-kit = { version = "0.3.2", features = [
    "NSAppearance",
    "NSButton",
    "NSControl",
    "NSResponder",
    "NSStatusBarButton",
    "NSStatusItem",
    "NSView",
] }
# Native Keychain Services access. Calling the Security.framework APIs in-
# process (rather than shelling out to /usr/bin/security) lets macOS attach
# "Always Allow" decisions to the app's code signature so the Keychain prompt
# stops recurring after the user approves it once.
security-framework = "3"
# Cross-platform secret storage. Apple backend writes to the same keychain
# `security-framework` reads from above; we use `keyring` here for the
# Cursor secret because we need write access (the legacy Claude path is
# read-only against an item Claude itself wrote).
keyring = { version = "3", default-features = false, features = ["apple-native"] }

[dev-dependencies]
filetime = "0.2"
tempfile = "3"
tokio = { version = "1", features = ["test-util", "macros", "rt-multi-thread"] }
